styles navbar and main component background.

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,6 +1,1 @@
-<h1>homepage works!</h1>
-<nav>
-  <a routerLink="" routerLinkActive="active">Pro-duc-tion</a>
-  <a routerLink="/about" routerLinkActive="active">About</a>
-  <a routerLink="/example-proj" routerLinkActive="active">example-projects</a>
-</nav>
+<div class="home">homepage works!</div>
