--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,13 @@
 .footer{
+  width: 100%;
+  height: 80px;
+  display:flex;
+  flex-direction: row;
+  background: black;
+  align-items: center;
   position: relative;
-  bottom: 100px;
-  left: 100px
+}
+
+.footer-text{
+  color: white;
 }
