--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <p>
+      <p class="footer-text">
         Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a>
       </p>
     </div>
