--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,9 +1,8 @@
 
 .home{
   top: 0px;
-  left: -3px;
-  width: 1920px;
-  height: 1077px;
-  position: relative;
-  background: url('src/assets/home.png')
+}
+.newb{
+  background: url('../../assets/home.png');
+  background-size: cover;
 }
