--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,5 @@
 <footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <p>
-        Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a>
-      </p>
-    </div>
-  </div>
+  <mat-toolbar>
+    <span>Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a></span>
+  </mat-toolbar>
 </footer>
