--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,4 +1,8 @@
 .footer{
   position: fixed;
   bottom: 0;
+  background-color: black;
+  align-items: center;
+  align-self: center;
+  color: white;
 }
