--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,3 @@
-<footer class="footer">
-  <mat-toolbar>
-    <span>Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a></span>
-  </mat-toolbar>
-</footer>
+<mat-toolbar class="footer">
+  <span>Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a></span>
+</mat-toolbar>
