--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,21 +1,39 @@
+.empty-space{
+  flex: 1 1 auto;
+}
 .NavBar{
-  width: 100%;
-  height: 60px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background: black;
-  align-items: center;
+  background-color: black;
+  position: fixed;
+  opacity: 0.75;
+  top: 0;
+  z-index: 1;
 }
 
-.NavBar__Logo{
+.logo-text{
   color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 2.25rem;
+  font-stretch: extra-expanded;
+  font-weight: bold;
+  opacity: 1;
+  padding: 0;
+  text-decoration-line: none;
+  vertical-align: middle;
 }
 
-.NavBar__Links--Anchor {
+.logo-image{
+  height: 3rem;
+}
+
+.links__anchor {
   padding: 6px;
   margin: 0 12px;
   color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-stretch: extra-expanded;
+  font-weight: bold;
+  opacity: 1;
+  text-decoration-line: none;
 }
 
 .menu-icon {
