--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,36 +2,43 @@
   flex: 1 1 auto;
 }
 .NavBar{
-  background-color: black;
+  background-color: transparent;
+  height: 7rem;
   position: fixed;
-  opacity: 0.75;
+  opacity: 1;
   top: 0;
   z-index: 1;
 }
 
 .logo-text{
   color: white;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 2.25rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 2.5rem;
   font-stretch: extra-expanded;
   font-weight: bold;
   opacity: 1;
-  padding: 0;
-  text-decoration-line: none;
-  vertical-align: middle;
+  padding-left: 4.75rem;
+  position: absolute;
+  text-decoration: none;
+  top: 2.75rem;
 }
 
 .logo-image{
-  height: 3rem;
+  height: 4rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+
+.links{
+  margin-top: 1rem;
 }
 
 .links__anchor {
   padding: 6px;
   margin: 0 12px;
   color: white;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-stretch: extra-expanded;
-  font-weight: bold;
   opacity: 1;
   text-decoration-line: none;
 }
