--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,5 @@
 <mat-grid-list
+  class="page"
   cols="4"
   gutterSize=20
   rowHeight="10rem"
@@ -10,6 +11,6 @@
       class="sampleContainer"
       id="{{tile.id}}"
   >
-    <img class="sampleImage" src={{tile.image}} />
+    <app-card class="sampleImage" [image]="tile.image"></app-card>
   </mat-grid-tile>
 </mat-grid-list>
