--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,4 +1,5 @@
 .card{
+    color: white;
     display: flex;
     justify-content: center;
     align-items: stretch;
@@ -6,20 +7,31 @@
     padding: 0;
     height: inherit;
 }
-.title{
+.primary-title{
+    font-size: 4rem;
     position: absolute;
-    bottom: 5rem;
+    bottom: 4rem;
     left: 2rem;
-    z-index: 1;
+    z-index: 0.9;
+}
+.secondary-title{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 4rem;
+    position: absolute;
+    top: 15rem;
+    vertical-align: middle;
+    z-index: 0.9;
 }
 .image{
     flex-shrink: 0;
     width: 100%;
     height: 100%;
 }
-.subtitle{
+.heading{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.75rem;
     position: absolute;
-    bottom: 4rem;
+    bottom: 10rem;
     left: 2rem;
-    z-index: 1;
+    z-index: 0.9;
 }
