--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,8 @@
 <mat-card class="card">
     <img class="image" src={{image}}/>
-    <h1 class="title">Title</h1>
-    <h4 class="subtitle">Subtitle</h4>
+    <h1 class="secondary-title" *ngIf="!isPrimary">{{title}}</h1>
+    <div *ngIf="isPrimary">
+        <h3 class="heading">{{heading}}</h3>
+        <h1 class="primary-title">{{title}}</h1>
+    </div>
 </mat-card>
