--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,9 +1,10 @@
 .footer{
-  position: fixed;
-  bottom: 0;
+  position: relative;
+  margin-top: 2rem;
   background-color: black;
   align-items: center;
   align-self: center;
   color: white;
   opacity: 0.75;
+  padding: 4rem 1rem;
 }
