feat: adds copyright message and links to footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,11 @@
 <mat-toolbar class="footer">
-  <span>Made with <3 by <a href="https://twitter.com/KennethOlvr">Kenny</a></span>
+  <div class="copyright">{{copyright}}</div>
+  <span class="empty-space"></span>
+  <div class="links">
+    <a class="link" id="links-email">Email</a>
+    <a class="link" id="links-instagram">Instagram</a>
+    <a class="link" id="links-twitter">Twitter</a>
+    <a class="link" id="links-facebook">Facebook</a>
+    <a class="link" id="links-vimeo">Vimeo</a>
+  </div>
 </mat-toolbar>
