--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,5 +6,17 @@
   align-self: center;
   color: white;
   opacity: 0.75;
-  padding: 4rem 1rem;
+  padding: 4rem;
+}
+.empty-space{
+  flex: 1 1 auto;
+}
+.link{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  padding: 0 0.75rem;
+}
+.copyright{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.25rem;
 }
