--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -46,3 +46,29 @@
 .menu-icon {
   color: white;
 }
+
+.mobile-menu{
+  background-color: black;
+  opacity: 0.75;
+}
+.logo-link-mobile{
+  text-decoration-line: none;
+}
+.logo-image-mobile{
+  height: 1.5rem;
+  padding-left: 0.75rem;
+  padding-top: 1.25rem;
+  text-decoration-line: none;
+}
+.logo-text-mobile{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.25rem;
+  opacity: 1;
+  padding-left: 2.75rem;
+  margin-top: -1.75rem;
+}
+.hamburger{
+  color: white;
+  padding-top: 1.25rem;
+}
