--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,16 +9,22 @@
     <a routerLink="/example-proj" routerLinkActive="active" class="links__anchor">example-projects</a>
   </div>
 </mat-toolbar>
-<div class="NavBar" *ngIf="isMobile">
-  <div class="NavBar__Logo">
-    <a routerLink="" routerLinkActive="active">TALL ORDER</a>
-  </div>
 
-  <!-- <i class="material-icons md-light"> menu </i> -->
-
-  <div class="NavBar__Links">
-    <i class="material-icons menu-icon">menu</i>
-    <!-- <a routerLink="/about" routerLinkActive="active" class="NavBar__Links--Anchor">About</a>
-    <a routerLink="/example-proj" routerLinkActive="active" class="NavBar__Links--Anchor">example-projects</a> -->
-  </div>
-</div>
+<mat-accordion *ngIf="isMobile" class="accordion" hideToggle>
+  <mat-expansion-panel class="mobile-menu">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        <a class="logo-link-mobile" routerLink="" routerLinkActive="active">
+          <img class="logo-image-mobile" src="../../../assets/interstitial.gif" />
+          <h3 class="logo-text-mobile">TALL ORDER</h3>
+        </a>
+        <span class="empty-space"></span>
+        <mat-icon class="hamburger">menu</mat-icon>
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="links">
+      <a routerLink="/about" routerLinkActive="active" class="links__anchor">About</a>
+      <a routerLink="/example-proj" routerLinkActive="active" class="links__anchor">example-projects</a>
+    </div>
+  </mat-expansion-panel>
+</mat-accordion>
