adds feature that makes menu disapear until scroll

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -50,6 +50,7 @@
 .mobile-menu{
   background-color: black;
   opacity: 0.75;
+  position:relative;
 }
 .logo-link-mobile{
   text-decoration-line: none;
