--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -19,4 +19,12 @@
 .copyright{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 1.25rem;
+  color: white;
+}
+.mobile-menu{
+  background-color: black;
+}
+.sm-links{
+  color: white;
+  z-index: 1;
 }
